files/rules.v4
# Generated by xtables-save v1.8.2 on Tue Mar 16 10:15:31 2021
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -m comment --comment localhost-network -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -m comment --comment "Allow SSH" -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 8 -m comment --comment "Allow ICMP Type8" -j ACCEPT
-A FORWARD -p tcp --syn -m limit --limit 1/second -m comment --comment "Flood & DoS" -j ACCEPT
-A FORWARD -p udp -m limit --limit 1/second -m comment --comment "Flood & DoS" -j ACCEPT
-A FORWARD -p icmp --icmp-type echo-request -m limit --limit 1/second -m comment --comment "Flood & DoS" -j ACCEPT
-A FORWARD -p tcp --tcp-flags SYN,ACK,FIN,RST RST -m limit --limit 1/s -m comment --comment "Port Scan" -j ACCEPT
-A OUTPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -o lo -m comment --comment localhost-network -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 53 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 53 -j ACCEPT
-A OUTPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 465 -m comment --comment "Allow SMTP" -j ACCEPT
-A OUTPUT -d 0.debian.pool.ntp.org -p udp -m udp --dport 123 -m comment --comment "0.debian.pool.ntp.org" -j ACCEPT
-A OUTPUT -d 1.debian.pool.ntp.org -p udp -m udp --dport 123 -m comment --comment "1.debian.pool.ntp.org" -j ACCEPT
-A OUTPUT -d 2.debian.pool.ntp.org -p udp -m udp --dport 123 -m comment --comment "2.debian.pool.ntp.org" -j ACCEPT
-A OUTPUT -d 3.debian.pool.ntp.org -p udp -m udp --dport 123 -m comment --comment "3.debian.pool.ntp.org" -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 43 -m comment --comment "whois" -j ACCEPT
COMMIT
# Completed on Tue Mar 16 10:15:31 2021
# Generated by xtables-save v1.8.2 on Tue Mar 16 10:15:31 2021
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
COMMIT
# Completed on Tue Mar 16 10:15:31 2021
